# command-centre

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  nixpacks.toml  pyproject.toml
app/: config.py  database.py  main.py
app/routers/: action_items.py  clients.py  projects.py  reflections.py  travel_plans.py
app/schemas/: action_items.py  analysis.py  clients.py  projects.py  reflections.py  travel_plans.py
app/services/: claude.py
dashboard/: .gitignore  package-lock.json  package.json
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/layout/: Layout.tsx  PageHeader.tsx  Sidebar.tsx
dashboard/src/components/shared/: ConfirmDialog.tsx  EmptyState.tsx  PriorityBadge.tsx  SentimentBadge.tsx  StatusBadge.tsx
dashboard/src/components/ui/: sonner.tsx
dashboard/src/lib/: api.ts  queryKeys.ts  utils.ts
dashboard/src/pages/action-items/: ActionItemForm.tsx  ActionItemsPage.tsx
dashboard/src/pages/clients/: ClientForm.tsx  ClientsPage.tsx
dashboard/src/pages/overview/: OverviewPage.tsx
dashboard/src/pages/projects/: ProjectDetailPage.tsx  ProjectForm.tsx  ProjectsPage.tsx
dashboard/src/pages/reflections/: ReflectionsPage.tsx
dashboard/src/pages/travel/: TravelForm.tsx  TravelPage.tsx
dashboard/src/types/: index.ts
supabase/migrations/: 00001_enable_extensions.sql  00002_create_clients.sql  00003_create_projects.sql  00004_create_project_clients.sql  00005_create_travel_plans.sql  00006_create_reflections.sql  00007_create_action_items.sql  00008_create_indexes.sql  00009_add_reflection_summary.sql
